# DupliVault

./: CMakeLists.txt  README.md
include/duplivault/: BackupOrchestrator.h  Chunker.h  Hasher.h  StorageRepository.h
src/: BackupOrchestrator.cpp  Chunker.cpp  Hasher.cpp  StorageRepository.cpp  main.cpp
tests/: CMakeLists.txt  backup_orchestrator_test.cpp  chunker_test.cpp  hasher_test.cpp  metadata_storage_test.cpp  restore_test.cpp  sha256_test.cpp  storage_repository_test.cpp
verification_data/: base_document.txt  modified_document.txt
